--- a/tasks.toml
+++ b/tasks.toml
@@ -1,4 +1,3 @@
-# tasks.toml
 [meta]
 title = "RouteMap Generator"
 description = "Refactoring from single HTML to structured TypeScript"
@@ -40,13 +39,20 @@ order = 3
 [[tasks]]
 id = "install-deps"
 text = "Run npm install"
-status = "pending"
+status = "done"
 section = "v0.1.0"
 order = 4
 
 [[tasks]]
 id = "verify-build"
 text = "Verify build (npm run dev)"
-status = "pending"
+status = "done"
 section = "v0.1.0"
-order = 5
+order = 5
+
+[[tasks]]
+id = "atomize-codebase"
+text = "Split monolithic files into atomic modules (geo, layout, prompt, ui)"
+status = "done"
+section = "v0.1.0"
+order = 6
