--- a/tasks.toml
+++ b/tasks.toml
@@ -1,22 +1,275 @@
+tasks = []
+
 [meta]
-title = "Project Roadmap"
-description = ""
+title = "PerkPath by TravelPerks"
+description = "Visual itinerary map generator"
 
 [[sections]]
 id = "v0.1.0"
-title = "v0.1.0"
-status = "current"
+title = "Initialization"
+status = "done"
 order = 0
 
 [[sections]]
 id = "v0.2.0"
-title = "v0.2.0"
-status = "pending"
+title = "Refactoring & SlopChop Compliance"
+status = "done"
+order = 1
+
+[[sections]]
+id = "v0.3.0"
+title = "UX Polish & Export Fixes"
+status = "current"
+order = 2
+
+[[tasks]]
+id = "init-project"
+text = "Set up package.json and dependencies"
+status = "done"
+section = "v0.1.0"
+order = 0
+
+[[tasks]]
+id = "lint-config"
+text = "Configure Biome"
+status = "done"
+section = "v0.1.0"
 order = 1
 
 [[tasks]]
-id = "documentation"
-text = '"Create README and DESIGN_DOC"'
+id = "extract-css"
+text = "Extract styles to src/style.css"
+status = "done"
+section = "v0.1.0"
+order = 2
+
+[[tasks]]
+id = "refactor-ts"
+text = "Refactor Logic to src/main.ts with Types"
+status = "done"
+section = "v0.1.0"
+order = 3
+
+[[tasks]]
+id = "install-deps"
+text = "Run npm install"
+status = "done"
+section = "v0.1.0"
+order = 4
+
+[[tasks]]
+id = "verify-build"
+text = "Verify build (npm run dev)"
+status = "done"
+section = "v0.1.0"
+order = 5
+
+[[tasks]]
+id = "atomize-codebase"
+text = "Split monolithic files into atomic modules (geo, layout, prompt, ui)"
+status = "done"
+section = "v0.1.0"
+order = 6
+
+[[tasks]]
+id = "fix-html-parse-error"
+text = "Fix control characters in index.html causing parse errors"
 status = "done"
 section = "v0.2.0"
 order = 0
+
+[[tasks]]
+id = "fix-high-arity"
+text = "Refactor layout.ts to use context objects (max 5 args)"
+status = "done"
+section = "v0.2.0"
+order = 1
+
+[[tasks]]
+id = "split-main"
+text = "Extract UI helpers from main.ts to reduce token count"
+status = "done"
+section = "v0.2.0"
+order = 2
+
+[[tasks]]
+id = "split-map"
+text = "Extract legend to separate module, reduce complexity"
+status = "done"
+section = "v0.2.0"
+order = 3
+
+[[tasks]]
+id = "rename-perkpath"
+text = "Rename project to PerkPath by TravelPerks"
+status = "done"
+section = "v0.2.0"
+order = 4
+
+[[tasks]]
+id = "fix-lint-errors"
+text = "Fix unused variable in leader-lines.ts"
+status = "done"
+section = "v0.2.0"
+order = 5
+
+[[tasks]]
+id = "split-map-export"
+text = "Extract export logic from map.ts to map-exporter.ts"
+status = "done"
+section = "v0.2.0"
+order = 6
+
+[[tasks]]
+id = "draggable-labels"
+text = "Implement draggable labels with leader line updates"
+status = "done"
+section = "v0.2.0"
+order = 7
+
+[[tasks]]
+id = "fix-arrow-rotation"
+text = "Fix arrow direction using turf.bearing"
+status = "done"
+section = "v0.2.0"
+order = 8
+
+[[tasks]]
+id = "toggle-visibility"
+text = "Add layer visibility controls to UI"
+status = "done"
+section = "v0.2.0"
+order = 9
+
+[[tasks]]
+id = "high-res-export"
+text = "Implement 2k+ resolution export scaling"
+status = "done"
+section = "v0.2.0"
+order = 10
+
+[[tasks]]
+id = "leader-lines-distance"
+text = "Draw leader lines based on 2.5x node size distance threshold"
+status = "done"
+section = "v0.2.0"
+order = 11
+
+[[tasks]]
+id = "ctrl-click-hide"
+text = "Ctrl+Click to hide labels/arrows until zoom"
+status = "done"
+section = "v0.2.0"
+order = 12
+
+[[tasks]]
+id = "label-size-slider"
+text = "Convert label font size input to slider"
+status = "done"
+section = "v0.2.0"
+order = 13
+
+[[tasks]]
+id = "extract-map-draw"
+text = "Extract Map Drawing Logic"
+status = "done"
+section = "v0.2.0"
+order = 14
+
+[[tasks]]
+id = "extract-config-ui"
+text = "Extract Config UI Logic"
+status = "done"
+section = "v0.2.0"
+order = 15
+
+[[tasks]]
+id = "add-ts-config"
+text = "Add tsconfig.json and vite.config.ts for Vercel build"
+status = "done"
+section = "v0.2.0"
+order = 16
+
+[[tasks]]
+id = "fix-ts-build-errors"
+text = "Fix strict type checking errors for Vercel build"
+status = "done"
+section = "v0.2.0"
+order = 17
+
+[[tasks]]
+id = "documentation"
+text = "Create README and DESIGN_DOC"
+status = "done"
+section = "v0.2.0"
+order = 18
+
+[[tasks]]
+id = "dedupe-locations"
+text = "Deduplicate locations with same name (e.g. Kilimanjaro Airport)"
+status = "pending"
+section = "v0.3.0"
+order = 0
+
+[[tasks]]
+id = "leader-line-corners"
+text = "Leader lines connect to closest corner of label box with no gap"
+status = "pending"
+section = "v0.3.0"
+order = 1
+
+[[tasks]]
+id = "smooth-beziers"
+text = "Smooth out janky bezier curves on route segments"
+status = "pending"
+section = "v0.3.0"
+order = 2
+
+[[tasks]]
+id = "start-end-colors"
+text = "Green=start, Red=end node color convention"
+status = "pending"
+section = "v0.3.0"
+order = 3
+
+[[tasks]]
+id = "color-presets"
+text = "Add color preset palette system for route types"
+status = "pending"
+section = "v0.3.0"
+order = 4
+
+[[tasks]]
+id = "smooth-zoom"
+text = "Implement fractional/smooth zooming without tile stepping"
+status = "pending"
+section = "v0.3.0"
+order = 5
+
+[[tasks]]
+id = "fix-export-viewport"
+text = "Export exactly matches viewport bounds and framing"
+status = "pending"
+section = "v0.3.0"
+order = 6
+
+[[tasks]]
+id = "fix-export-layers"
+text = "Fix layer-only exports (labels only, routes only) with transparency"
+status = "pending"
+section = "v0.3.0"
+order = 7
+
+[[tasks]]
+id = "save-restore-views"
+text = "Save/restore view configurations to browser storage and files"
+status = "pending"
+section = "v0.3.0"
+order = 8
+
+[[tasks]]
+id = "inset-map"
+text = "Picture-in-picture inset for clustered regions on wide-area maps"
+status = "pending"
+section = "v0.3.0"
+order = 9
